examples/test/testpolicy3908.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3908
  namespace: namespace449
spec:
  podSelector:
    matchLabels:
      key45: value10
      key17: value21
      key24: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value40
      podSelector:
        matchLabels:
          key8: value14
